2000-08-20  Jim Meyering  <meyering@lucent.com>

	* check-decl.m4: Include utmp.h `#if HAVE_UTMP_H', rather than
	`#if !HAVE_UTMPX_H'.  The latter would lose on systems with neither
	utmp.h nor utmpx.h.  Reported by Eli Zaretskii.

2000-08-11  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	Improve fileutils installation on systems where running
	programs (like install) can't be unlinked.
	* unlink-busy.m4 (jm_FUNC_UNLINK_BUSY_TEXT): New file/macro.
	* jm-macros.m4: Use jm_FUNC_UNLINK_BUSY_TEXT.

2000-08-06  Paul Eggert  <eggert@twinsun.com>

	* m4/mbstate_t.m4 (AC_MBSTATE_T): Define mbstate_t to be int,
	not char, for compatibility with glibc 2.1.3 strftime.c.

2000-07-23  Paul Eggert  <eggert@twinsun.com>

	* mbswidth.m4 (jm_PREREQ_MBSWIDTH): Check for wcwidth declaration.

2000-07-23  Jim Meyering  <meyering@lucent.com>

	* check-decl.m4 (jm_CHECK_DECLS): Check for declarations of these, too:
	getgrgid, getpwuid, getuid.

2000-07-16  Bruno Haible  <haible@clisp.cons.org>

        * mbswidth.m4: New file.
        * prereq.m4 (jm_PREREQ): Call jm_PREREQ_MBSWIDTH.

2000-07-14  Jim Meyering  <meyering@lucent.com>

	* xstrtoumax.m4 (jm_AC_PREREQ_XSTRTOUMAX): Require jm_AC_TYPE_UINTMAX_T.

2000-07-10  Paul Eggert  <eggert@twinsun.com>

	From a suggestion by Bruno Haible.
	* mbstate_t.m4 (AC_MBSTATE_T):
	Renamed from AC_MBSTATE_T_OBJECT.  All uses changed.
	Change from a two-part test, which defines both HAVE_MBSTATE_T_OBJECT
	and mbstate_t, to a single-part test that simply defines mbstate_t.
	* prereq.m4 (jm_PREREQ_QUOTEARG): s/AC_MBSTATE_T_OBJECT/AC_MBSTATE_T/.

2000-07-10  Jim Meyering  <meyering@lucent.com>

	* strerror_r.m4: Mirror the correction made in autoconf.

	* gnu-source.m4: Output to confdefs.h directly.
	Suggestion from Akim Demaille.

2000-07-09  Jim Meyering  <meyering@lucent.com>

	* jm-macros.m4 (jm_MACROS): Add a test to see if -lm is required
	to link seq.  If so, set SEQ_LIBM to -lm.  From Bruno Haible.
