@@ -1,3 +1,8 @@
+2000-08-26  Jim Meyering  <meyering@lucent.com>
+
+	* jm-macros.m4: Use jm_FUNC_FPENDING.
+	* fpending.m4: New file.
+
 2000-08-20  Jim Meyering  <meyering@lucent.com>
 
 	* check-decl.m4: Include utmp.h `#if HAVE_UTMP_H', rather than
